--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "url": "git+https://github.com/akinyeleolat/carBooking.git"
   },
   "keywords": [
-    "car",
-    "booking",
+    "starwars",
+    "character",
     "auhthentication"
   ],
   "author": "Oluwatosin Akinyele",
@@ -57,6 +57,7 @@
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.6",
+    "sqlite3": "^5.0.2",
     "slug": "^1.1.0",
     "uuid": "^3.3.2",
     "validatorjs": "^3.15.1",
@@ -81,8 +82,7 @@
     "prettier-eslint-cli": "^5.0.0",
     "sequelize-cli": "^6.2.0",
     "sinon": "^7.3.2",
-    "sinon-chai": "^3.3.0",
-    "sqlite3": "^4.2.0"
+    "sinon-chai": "^3.3.0"
   },
   "lint-staged": {
     "*.js": [
